--- a/UI/styles.qss
+++ b/UI/styles.qss
@@ -95,3 +95,11 @@ QPushButton#writeInvoicesButton {
 QPushButton#writeInvoicesButton:hover {
     background-color: #9256e6;
 }
+
+QTextEdit {
+    background-color: #2a2a3d;
+    color: #eee;
+    border: 1px solid #444;
+    border-radius: 5px;
+    padding: 10px;
+}
